fixed max width

--- a/index.html
+++ b/index.html
@@ -155,55 +155,58 @@
             </div>
         </div>
         <div class="footer">
-            <ul class="language">
-                <li>English(UK)</li>
-                <li><a href="https://bn-in.facebook.com/">বাংলা</a></li>
-                <li><a href="https://hi-in.facebook.com/">हिन्दी</a></li>
-                <li><a href="https://ur-pk.facebook.com/">اردو</a></li>
-                <li><a href="https://ne-np.facebook.com/">नेपाली</a></li>
-                <li><a href="https://or-in.facebook.com/">ଓଡ଼ିଆ</a></li>
-                <li><a href="https://es-la.facebook.com/">Español</a></li>
-                <li><a href="https://pt-br.facebook.com/">Português (Brasil)</a></li>
-                <li><a href="https://fr-fr.facebook.com/">Français (France)</a></li>
-                <li><a href="https://de-de.facebook.com/">Deutsch</a></li>
-                <li><a href="https://it-it.facebook.com/">Italiano</a></li>
-            </ul>
-            <br/>
-            <div id="contentCurve"></div>
-            <ul class="related">
-                <li>Sign Up</li>
-                <li>Log In</li>
-                <li>Messenger</li>
-                <li>Facebook Lite</li>
-                <li>Watch</li>    
-                <li>People</li>
-                <li>Pages</li>
-                <li>Page categories</li>
-                <li>Places</li>
-                <li>Games</li>
-                <li>Locations</li>
-                <li>Marketplace</li>
-                <li>Facebook Pay</li>
-                <li>Groups</li>
-                <li>Oculus</li>
-                <li>Portal</li>
-                <li>Instagram</li>
-                <li>Local</li>
-                <li>Fundraisers</li>
-                <li>Services</li>
-                <li>About</li>
-                <li>Create ad</li>
-                <li>Create Page</li>
-                <li>Developers</li>
-                <li>Careers</li>
-                <li>Privacy</li>
-                <li>Cookies</li>
-                <li>AdChoices</li>
-                <li>Terms</li>
-                <li>Help</li>
-                <li>Settings</li>
-            </ul>
-            <span id="copyright">Facebook © 2020</span>
+            <div class="footer_container">
+                <ul class="language">
+                    <li>English(UK)</li>
+                    <li><a href="https://bn-in.facebook.com/">বাংলা</a></li>
+                    <li><a href="https://hi-in.facebook.com/">हिन्दी</a></li>
+                    <li><a href="https://ur-pk.facebook.com/">اردو</a></li>
+                    <li><a href="https://ne-np.facebook.com/">नेपाली</a></li>
+                    <li><a href="https://or-in.facebook.com/">ଓଡ଼ିଆ</a></li>
+                    <li><a href="https://es-la.facebook.com/">Español</a></li>
+                    <li><a href="https://pt-br.facebook.com/">Português (Brasil)</a></li>
+                    <li><a href="https://fr-fr.facebook.com/">Français (France)</a></li>
+                    <li><a href="https://de-de.facebook.com/">Deutsch</a></li>
+                    <li><a href="https://it-it.facebook.com/">Italiano</a></li>
+                </ul>
+                <br/>
+                <div id="contentCurve"></div>
+                <ul class="related">
+                    <li>Sign Up</li>
+                    <li>Log In</li>
+                    <li>Messenger</li>
+                    <li>Facebook Lite</li>
+                    <li>Watch</li>    
+                    <li>People</li>
+                    <li>Pages</li>
+                    <li>Page categories</li>
+                    <li>Places</li>
+                    <li>Games</li>
+                    <li>Locations</li>
+                    <li>Marketplace</li>
+                    <li>Facebook Pay</li>
+                    <li>Groups</li>
+                    <li>Oculus</li>
+                    <li>Portal</li>
+                    <li>Instagram</li>
+                    <li>Local</li>
+                    <li>Fundraisers</li>
+                    <li>Services</li>
+                    <li>About</li>
+                    <li>Create ad</li>
+                    <li>Create Page</li>
+                    <li>Developers</li>
+                    <li>Careers</li>
+                    <li>Privacy</li>
+                    <li>Cookies</li>
+                    <li>AdChoices</li>
+                    <li>Terms</li>
+                    <li>Help</li>
+                    <li>Settings</li>
+                </ul>
+                <span id="copyright">Facebook © 2020</span>
+            </div>
+            
         </div>
     </body>
 </html>
