updated tab icon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <title>Facebook - login or sign up</title>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <link rel="icon" href="images/62591-logo-computer-facebook-icons-free-png-hq_32x32.ico">
+        <link rel="icon" href="images/iconfinder_square-facebook_317727.png">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div class="loggedout_menubar_container">
