added mobile version

--- a/index.html
+++ b/index.html
@@ -54,13 +54,41 @@
             </div>
         </div>
         <div class="bgcontainer">
-            <div class="bgsubcontainer">
-                <div class="mobContentContainer">
-                    <form class="mobLoginForm" action="">
-                        <input type="text" placeholder="Mobile number or email address" id="mlogin">
-                        <input type="password" placeholder="Password" id="mpass">
-                    </form>
+            <div class="mobContentContainer">
+                <form class="mobLoginForm" action="">
+                    <input type="text" placeholder="Mobile number or email address" id="mlogin">
+                    <input type="password" placeholder="Password" id="mpass">
+                    <button type="button" value="Log in" name="login" id="mloginbutton">Log in</button>
+                </form>
+                <div class="separator">                   
+                    <span class="separatorContent">or</span>                  
                 </div>
+                <div class="signup-mobile">
+                    <a role="button" id="signup-button-mobile">Create New Account</a>
+                </div>
+                <span class="forgot-pass-mobile"><a href="https://m.facebook.com/recover/initiate/?c=https%3A%2F%2Fm.facebook.com%2F&r&cuid&ars=facebook_login&lwv=100&refid=8">Forgotten password?</a></span>
+            </div>
+            <div class="mobFooter">
+                <div class="mobFooterContainer">
+                    <div class="mobFooterLeftContainer">
+                        <ul class="leftList">
+                            <div class="eng"><li>English(UK)</li></div>
+                            <li>हिन्दी</li>
+                            <li>नेपाली</li>
+                            <li>Español</li>
+                        </ul>
+                    </div>
+                    <div class="mobFooterRightContainer">
+                        <ul class="leftList">
+                            <li>বাংলা</li>
+                            <li>اردو</li>
+                            <li>ଓଡ଼ିଆ</li>
+                            <div class="more"><li>+</li></div>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="bgsubcontainer">
                 <div class="left-container">
                     <div class="description">Facebook helps you to connect and share with the people in your life.</div>
                     <img src="images/fb.png" description="social network"/>
