--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Facebook - login or sign up</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="icon" href="images/iconfinder_square-facebook_317727.png">
-        <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div class="loggedout_menubar_container">
