--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                         </ul>
                     </div>
                 </div>
+                <div class="mobFooterText">Facebook Inc.</div>
             </div>
             <div class="bgsubcontainer">
                 <div class="left-container">
