--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                                 <option value="2009">2009</option>
                                 <option value="2008" selected>2008</option>
                             </select>
-                            <img src="images/iconfinder-icon.svg" id="questionmark">
+                            <a href="#" title="Click for more information"><img src="images/iconfinder-icon.svg" id="questionmark1"></a>
                         
                         </div>
                         <div class="gender_container">
@@ -183,7 +183,7 @@
                             <label for="male" class="rdobtn_label">Male</label>
                             <input type="radio"name="gender" id="custom">
                             <label for="custom" class="rdobtn_label">Custom</label>
-                            <img src="images/iconfinder-icon.svg" id="questionmark">
+                            <a href="#" title="Click for more information"><img src="images/iconfinder-icon.svg" id="questionmark2"></a>
                         </div>
                         <div class="form_paragraph_container">
                             <p>By clicking Sign Up, you agree to our <span>Terms,</span> <span>Data Policy</span> and <span>Cookie Policy.</span> You may receive SMS notifications from us and can opt out at any time.</p>
@@ -245,8 +245,7 @@
                     <li>Settings</li>
                 </ul>
                 <span id="copyright">Facebook © 2020</span>
-            </div>
-            
+            </div>            
         </div>
     </body>
 </html>
