added minor modifications

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
             <div class="bgsubcontainer">
                 <div class="left-container">
-                    <div class="description">Facebook helps you to connect and share with the people in your life.</div>
+                    <div class="description">Facebook helps you connect and share with the people in your life.</div>
                     <img src="images/fb.png" description="social network"/>
                 </div>
                 <div class="right-container">
