made modifications to make the site look more realistic

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
             <div class="loggedout_menubar">
                 <div class="header">
                     <div class="logo">
-                        <a href="index.html" id="homepage_redirect"><h1>facebook</h1></a>
+                        <!-- <a href="index.html" id="homepage_redirect"><h1>facebook</h1></a> -->
+                        <a href="index.html" id="homepage_redirect"><img src="images/logo.png" id="flogo"/></a>
                     </div>
                     <div id="login_container">
                         <form id="loginform" action="https://www.facebook.com/login/device-based/regular/login/?login_attempt=1&amp;lwv=110">
@@ -106,7 +107,7 @@
                         <input type="text" placeholder="Mobile number or email address" name="contact" id="contact">
                         <input type="password" placeholder="New password" name="pwd" id="pwd">
                         <div class="birthday_container">
-                            <div class="header_wrapper"><label class="bgheader">Birthday</label></div>
+                            <div class="header_wrapper"><label class="bgheader">Date of birth</label></div>
                             <select name="days" id="days"> 
                                 <option value="Day">Day</option> 
                                 <option value="1">1</option> 
